ZhangGJ:Add V1_Chapter4:OOP

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>V1_Chapter02</module>
         <module>V1_Chapter03</module>
+        <module>V1_Chapter04</module>
     </modules>
 
     <build>
