ZhangGJ:Add V1_Chapter7:Exception...

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>V1_Chapter04</module>
         <module>V1_Chapter05</module>
         <module>V1_Chapter06</module>
+        <module>V1_Chapter07</module>
     </modules>
 
     <build>
