ZhangGJ:Add V1_Chapter8:Generic

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>V1_Chapter05</module>
         <module>V1_Chapter06</module>
         <module>V1_Chapter07</module>
+        <module>V1_Chapter08</module>
     </modules>
 
     <build>
