--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>V1_Chapter06</module>
         <module>V1_Chapter07</module>
         <module>V1_Chapter08</module>
+        <module>V1_Chapter09</module>
     </modules>
 
     <dependencies>
