--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>V1_Chapter08</module>
         <module>V1_Chapter09</module>
         <module>V1_Chapter14</module>
+        <module>V2_Chapter01</module>
     </modules>
 
     <dependencies>
