--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>V1_Chapter09</module>
         <module>V1_Chapter14</module>
         <module>V2_Chapter01</module>
+        <module>V2_Chapter02</module>
     </modules>
 
     <dependencies>
