ZhangGJ:End V2_Chapter4:Internet

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>V2_Chapter01</module>
         <module>V2_Chapter02</module>
         <module>V2_Chapter03</module>
+        <module>V2_Chapter04</module>
     </modules>
 
     <dependencies>
