--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>V2_Chapter03</module>
         <module>V2_Chapter04</module>
         <module>V2_Chapter05</module>
+        <module>V2_Chapter06</module>
     </modules>
 
     <dependencies>
