--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>V2_Chapter05</module>
         <module>V2_Chapter06</module>
         <module>V2_Chapter07</module>
+        <module>V2_Chapter08</module>
     </modules>
 
     <dependencies>
