--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>V2_Chapter06</module>
         <module>V2_Chapter07</module>
         <module>V2_Chapter08</module>
+        <module>V2_Chapter09</module>
     </modules>
 
     <dependencies>
